# PinutEngine

./: .clang-format  .gitmodules  CMakeLists.txt  utils.cmake
assets/meshes/cornell_box/: cornell_box.mtl
assets/meshes/monkey_smooth/: suzanne.mtl
assets/viking_room/: viking_room.mtl
libs/common/: CMakeLists.txt  pch.hpp
libs/common/include/common/: color.h  defines.h  file.h
libs/common/include/common/containers/: enumMap.h  map.h
libs/common/src/: file.cpp
libs/pinut/: CMakeLists.txt  pch.hpp  stdafx.h
libs/pinut/include/: pch.hpp
libs/pinut/include/pinut/: defines.h
libs/pinut/include/pinut/assets/: asset.h  material.h  mesh.h  texture.h
libs/pinut/include/pinut/components/: baseComponent.h  lightComponent.h  meshComponent.h  renderComponent.h  skyComponent.h  transformComponent.h
libs/pinut/include/pinut/core/: application.h  assetManager.h  entity.h  node.h  scene.h  window.h
libs/pinut/include/pinut/imgui/: pinutImgui.h
libs/pinut/include/pinut/loaders/: objLoader.h
libs/pinut/include/pinut/renderer/: common.h  materialData.h  meshData.h  offscreenState.h  primitives.h  renderer.h  swapchain.h  textureData.h  utils.h
libs/pinut/include/pinut/renderer/pipelines/: draw_texture_pipeline.h  skybox_pipeline.h
libs/pinut/include/pinut/renderer/shaders/: draw_image_shader.h  quad_shader.h  skybox_shader.h
libs/pinut/include/pinut/renderer/stages/: depthPassStage.h  lightForwardStage.h  presentStage.h  skyboxStage.h  stage.h
libs/pinut/libs/glm/: CMakeLists.txt
libs/pinut/libs/stb/: CMakeLists.txt
libs/pinut/libs/vma/: CMakeLists.txt
libs/pinut/pipelines/: pipelines.json
libs/pinut/shaders/: CMakeLists.txt  basic.frag  basic.vert  depth_pass.vert  draw_texture.frag  flat.frag  flat.vert  helpers.glsl  quad.vert  skybox.frag  skybox.vert  transparent.frag  transparent.vert  wireframe.vert
libs/pinut/src/assets/: asset.cpp  asset.h  material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h
libs/pinut/src/components/: lightComponent.cpp  lightComponent.h  meshComponent.cpp  meshComponent.h  renderComponent.cpp  renderComponent.h  skyComponent.cpp  skyComponent.h  transformComponent.cpp  transformComponent.h
libs/pinut/src/core/: application.cpp  application.h  assetManager.cpp  assetManager.h  buffer.cpp  buffer.h  camera.cpp  camera.h  commandBufferRing.cpp  commandBufferRing.h  common.cpp  common.h  defines.h  descriptorSetManager.cpp  descriptorSetManager.h  device.cpp  device.h  entity.cpp  entity.h  gbuffer.cpp  gbuffer.h  light.cpp  light.h  node.cpp  node.h  renderable.cpp  renderable.h  scene.cpp  scene.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vulkan_utils.cpp  vulkan_utils.h  window.cpp
libs/pinut/src/imgui/: pinutImgui.cpp  pinutImgui.h
libs/pinut/src/loaders/: gltfLoader.cpp  gltfLoader.h  objLoader.cpp  objLoader.h  rawAssetData.h
libs/pinut/src/misc/: camera.cpp  camera.h
libs/pinut/src/pipelines/: forward.cpp  forward.h  pipelineBuilder.cpp  pipelineBuilder.h
libs/pinut/src/renderer/: buffer.cpp  buffer.h  commandBufferManager.cpp  commandBufferManager.h  common.h  descriptorSetManager.cpp  descriptorSetManager.h  device.cpp  device.h  material.cpp  material.h  materialData.cpp  materialData.h  mesh.cpp  mesh.h  meshData.cpp  meshData.h  offscreenState.cpp  offscreenState.h  pipeline.cpp  pipeline.h  primitives.cpp  primitives.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  skyData.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utils.cpp  utils.h
libs/pinut/src/renderer/materials/: material.cpp  material.h  materialManager.cpp  materialManager.h  opaqueMaterial.cpp  opaqueMaterial.h  skyboxMaterial.cpp  skyboxMaterial.h  transparentMaterial.cpp  transparentMaterial.h  wireframeMaterial.cpp  wireframeMaterial.h
libs/pinut/src/renderer/pipelines/: draw_texture_pipeline.h  forward.cpp  forward.h  skybox_pipeline.h
libs/pinut/src/renderer/shaders/: draw_image_shader.h  flat_fs.h  flat_vs.h
libs/pinut/src/renderer/stages/: depthPassStage.cpp  depthPassStage.h  lightForwardStage.cpp  lightForwardStage.h  materialManager.cpp  materialManager.h  opaqueStage.cpp  opaqueStage.h  pipelineStage.cpp  pipelineStage.h  presentStage.cpp  presentStage.h  skyboxStage.cpp  skyboxStage.h  transparentStage.cpp  transparentStage.h  wireframeStage.cpp  wireframeStage.h
libs/pinut/src/scene/: material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h
libs/pinut/src/shaders/: basic.vert  forward.frag  forward.vert  forwardPerFrame.h  pbr_funcs.glsl
libs/render_device/: CMakeLists.txt  pch.hpp
libs/render_device/include/: attachment.h  pch.hpp
libs/render_device/include/render_device/: buffer.h  bufferDescriptor.h  device.h  drawCall.h  gpuresource.h  offscreenState.h  renderPipeline.h  resourceGenerator.h  shader.h  states.h  texture.h  textureDescriptor.h  textureFormat.h
libs/render_device/include/render_device/vulkan/: descriptorSetManager.h  stagingBufferAllocator.h  utils.h  vulkanDevice.h  vulkanPipelineBuilder.h  vulkanTexture.h  vulkanVertexDeclaration.h
libs/render_device/internal/vulkan/: stagingBufferAllocator.h  utils.h  vulkanBuffer.h  vulkanDevice.h
libs/render_device/src/: buffer.cpp  buffer.h  descriptorSetManager.cpp  descriptorSetManager.h  device.cpp  device.h  drawCall.cpp  drawCall.h  init_utils.cpp  init_utils.h  offscreenState.cpp  pch.hpp  renderPipeline.cpp  renderPipeline.h  resourceGenerator.cpp  shader.cpp  shader.h  states.cpp  states.h  texture.cpp
libs/render_device/src/vulkan/: descriptorSetManager.cpp  descriptorSetManager.h  device.cpp  device.h  pipeline.cpp  pipeline.h  pipelineBuilder.cpp  pipelineBuilder.h  stagingBufferAllocator.cpp  stagingBufferAllocator.h  utils.cpp  utils.h  vulkanBuffer.cpp  vulkanBuffer.h  vulkanDevice.cpp  vulkanDevice.h  vulkanPipeline.cpp  vulkanPipeline.h  vulkanPipelineBuilder.cpp  vulkanTexture.h  vulkanVertexDeclaration.cpp
sandbox/: CMakeLists.txt  pch.hpp
sandbox/src/: pch.hpp  sandbox.cpp  sandbox.h
src/: CMakeLists.txt  renderer.cpp  renderer.h  sandbox.cpp  sandbox.h  stdafx.h
